# pda-2026-engenharia

./: .dockerignore  .gitignore  README.md  docker-compose.yml  laudo.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260414_0001_inicial.py  20260415_0002_perfil_profissional.py  20260416_0003_pagina_config.py
backend/app/: auth.py  bootstrap.py  config.py  database.py  main.py
backend/app/api/v1/: admin.py  analise_multi_zona.py  analise_risco.py  auth.py  calcular.py  dashboard.py  fotos.py  laudo.py  laudo_analise.py  pagina.py  pie.py  projetos.py  spda.py  util.py  wizard_analise.py  word_laudo.py
backend/app/engine/: areas.py  avaliacao.py  calculo_completo.py  eventos.py  frequencia_danos.py  perdas.py  probabilidades.py  recomendador.py  riscos.py  zonas.py
backend/app/models/: orm.py
backend/app/nbr5419/: enums.py  ng_mapa.py  parte1_principios.py  parte2_linhas.py  parte2_tabelas.py  parte3_spda.py  parte4_mps.py
backend/app/schemas/: analise_risco.py  calcular.py
backend/app/services/: checklist_inspecao.py  laudo_remediador.py  pdf_generator.py  pdf_inspecao.py  pdf_pie.py  word_generator.py
backend/app/services/templates/: laudo_analise_risco.html  laudo_inspecao.html  prontuario_pie.html
backend/app/tests/: README.md  test_calculo_completo_core.py  test_endpoint_adapters.py  test_normative_tables.py
frontend/: .env.example  .npmrc  Dockerfile  next.config copy.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.check.json
k8s/: .gitignore  (+5 more)
(+56 files in other folders)
